--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -46,7 +46,7 @@ name: 'Terraform-Plan'
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "master" ]
   pull_request:
 
 permissions:
@@ -58,9 +58,9 @@ jobs:
     runs-on: ubuntu-latest
     #environment: production
     env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_KEY_ID}}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRETE_ID}}
-
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_KEY_ID}}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRETE_ID}}
+  
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
     # defaults:
     #   run:
@@ -76,6 +76,11 @@ jobs:
       uses: hashicorp/setup-terraform@v1
       # with:
       #   cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+    # - name: Configure AWS credentials
+    #   run: |
+    #     echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >> $GITHUB_ENV
+    #     echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
+
 
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
