--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -87,22 +87,27 @@ jobs:
     #     echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
 
 
-    # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
-    - name: Terraform Init
-      run: terraform init
+    # # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
+    # - name: Terraform Init
+    #   run: terraform init
 
-    # Checks that all Terraform configuration files adhere to a canonical format
-    - name: Terraform Format
-      run: terraform fmt -check
+    # # Checks that all Terraform configuration files adhere to a canonical format
+    # - name: Terraform Format
+    #   run: terraform fmt -check
 
-    # Generates an execution plan for Terraform
-    - name: Terraform Plan
-      # id: planif: github.event_name == 'push'
-      run: terraform plan -no-color
-      #continue-on-error: true
+    # # Generates an execution plan for Terraform
+    # - name: Terraform Plan
+    #   # id: planif: github.event_name == 'push'
+    #   run: terraform plan -no-color
+    #   #continue-on-error: true
 
-      # On push to "main", build or change infrastructure according to Terraform configuration files
-      # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
-    - name: Terraform Apply/Destroy
-      #if: github.ref == 'refs/heads/"master"' && github.event_name == 'push'
-      run: terraform apply -auto-approve 
+    #   # On push to "main", build or change infrastructure according to Terraform configuration files
+    #   # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
+    # - name: Terraform Apply/Destroy
+    #   #if: github.ref == 'refs/heads/"master"' && github.event_name == 'push'
+    #   run: terraform apply -auto-approve 
+  destroy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: terraform destroy
+        run: terraform destroy -auto-approve
