--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -81,10 +81,10 @@ jobs:
         terraform_version: 1.6
       # with:
       #   cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
-    # - name: Configure AWS credentials
-    #   run: |
-    #     echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >> $GITHUB_ENV
-    #     echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
+    - name: Configure AWS credentials
+      run: |
+        echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >> $GITHUB_ENV
+        echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
 
 
     # # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
@@ -101,13 +101,13 @@ jobs:
     #   run: terraform plan -no-color
     #   #continue-on-error: true
 
-    #   # On push to "main", build or change infrastructure according to Terraform configuration files
-    #   # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
-    # - name: Terraform Apply/Destroy
-    #   #if: github.ref == 'refs/heads/"master"' && github.event_name == 'push'
-    #   run: terraform apply -auto-approve 
-  destroy:
-    runs-on: ubuntu-latest
-    steps:
-      - name: terraform destroy
-        run: terraform destroy -auto-approve
+      # On push to "main", build or change infrastructure according to Terraform configuration files
+      # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
+    - name: Terraform Apply/Destroy
+      #if: github.ref == 'refs/heads/"master"' && github.event_name == 'push'
+      run: terraform destroy -auto-approve 
+  # destroy:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: terraform destroy
+  #       run: terraform destroy -auto-approve
